xfsprogs-1.3.16 (17 December 2001)
	- added text dump type to xfs_db (mkp)
	- removed use of a temporary file in xfs_db when processing
	  commands on the command line - allows xfs_check to be run
	  on read-only root filesystems

xfsprogs-1.3.15 (12 December 2001)
	- reenable the use of the BLKBSZSET ioctl, its baaack
	- sync recent XFS kernel source changes back into libxfs

xfsprogs-1.3.14 (05 December 2001)
	- fix minor debian package version numbering issue
	- add documentation for xfs_db(8) label/uuid commands
	- automatic inode sizing code in mkfs.xfs has been removed
	  (restricting inodes to 32 bits) - Steve's recent kernel
	  changes mean this is no longer an issue
	- fix bug in mkfs.xfs size cross-check for realtime device

xfsprogs-1.3.13 (25 October 2001)
	- fix bug in mkfs for 1Tbyte + filesystems
	- sync with recent kernel changes - this does not affect
	  userspace (libxfs), all affected code is removed by cpp.

xfsprogs-1.3.12 (17 October 2001)
	- implement the -f (file) option to xfs_logprint
	- rework the xlog code into libxlog for code sharing
	- xfs_repair now detects a dirty log and, without -L, will
	  no longer blindly zero it (which prevents any recovery)

xfsprogs-1.3.11 (17 October 2001)
	- tidy up some (benign) compiler warnings from libxfs
	- fixed 64-bit pointer alignment issues in xfs_check
	- fixed 64-bit pointer alignment issues in xfs_repair
	- verified these on IA64, also reported to fix sparc issues

xfsprogs-1.3.10 (12 October 2001)
	- sync with XFS kernel header changes for EAs by-handle
	- ported xfs_imap command for dumping the inode map

xfsprogs-1.3.9 (03 October 2001)
	- fix xfs_repair bug in handling a corrupt root directory
	  inode with multiple "lost+found" entries
	- fix xfs_logprint bug in scanning for log head and tail
	- ensure xfs_bmap doesn't issue XFS ioctls to non-XFS files
	- numerous man page updates

xfsprogs-1.3.8 (19 September 2001)
	- rewrote the LVM support used by mkfs.xfs to call external