@@ -1,3 +1,8 @@
+[current]
+	- xfs_repair fix to prevent double insertion into the
+	  uncertain_inode AVL trees
+	- use snprintf instead of sprintf
+
 xfsprogs-1.3.16 (17 December 2001)
 	- added text dump type to xfs_db (mkp)
 	- removed use of a temporary file in xfs_db when processing
